--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "gdevilbat/sparda-cms-core-module": "^5.7.5",
-        "gdevilbat/sparda-cms-post-module": "^2.2"
+        "gdevilbat/sparda-cms-post-module": "^2.2",
+        "gdevilbat/sparda-cms-blog-module": "^1.0"
     },
     "extra": {
         "laravel": {
