--- a/resources/views/admin/mix-manifest.json
+++ b/resources/views/admin/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/v_1/js/lazada.js": "/v_1/js/lazada.js",
     "/v_1/js/scrapper.js": "/v_1/js/scrapper.js",
     "/v_1/js/shopee.js": "/v_1/js/shopee.js",
     "/v_1/js/tokopedia.js": "/v_1/js/tokopedia.js"
