--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gdevilbat/sparda-cms-ecommerce-module",
+    "name": "gdevilbat/ecommerce-module",
     "type": "laravel-module",
     "description": "",
     "authors": [
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "gdevilbat/sparda-cms-core-module": "^5.7.5",
-        "gdevilbat/sparda-cms-post-module": "^2.9",
-        "gdevilbat/sparda-cms-blog-module": "^1.2"
+        "gdevilbat/core-module": "^5.7.5",
+        "gdevilbat/post-module": "^2.9",
+        "gdevilbat/blog-module": "^1.2"
     },
     "extra": {
         "laravel": {
