--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gdevilbat/sparda-cms-ecommerce-module",
+    "name": "gdevilbat/ecommerce-module",
     "type": "laravel-module",
     "description": "",
     "authors": [
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "gdevilbat/sparda-cms-core-module": "^5.8",
-        "gdevilbat/sparda-cms-blog-module": "^4.4",
+        "gdevilbat/core-module": "^5.8",
+        "gdevilbat/blog-module": "^4.4",
         "spatie/array-to-xml": "^2.0"
     },
     "extra": {
